pbuilder (0.45) unstable; urgency=low

  * hack HOME to the fakerooted user when fakerooting, to hopefully fool
   GNUStep builds, etc.
  * Standards-Version: 3.5.7. 
  * Build-dep on debhelper 4.1.0 or greater, which removed usr/doc symlink.
  * fix failure cases when initial *dsc file is invalid.

 -- Junichi Uekawa <dancer@debian.org>  Thu, 24 Oct 2002 13:47:35 +0900

pbuilder (0.44) unstable; urgency=low

  * pbuilder-satisfydepends: now searches for a version that matches, instead of sorting.
  (closes: #164919)
  thanks: Henrique de Moraes Holschuh <hmh@debian.org>
  * pbuilder update updates the apt-lines when --override-config is specified.
  (closes: #164473)
  thanks: David Schmitt <david@schmitt.edv-bus.at>

 -- Junichi Uekawa <dancer@debian.org>  Wed, 16 Oct 2002 20:55:37 +0900

pbuilder (0.43) unstable; urgency=low

  * Add locking capabilities in base.tgz handling.

 -- Junichi Uekawa <dancer@debian.org>  Fri, 11 Oct 2002 17:14:09 +0900

pbuilder (0.42) unstable; urgency=low

  * fix quoting problem in KILL_WAIT_PID

 -- Junichi Uekawa <dancer@debian.org>  Sun,  6 Oct 2002 17:37:43 +0900

pbuilder (0.41) unstable; urgency=low

  * Prevent kill from going wild :P (closes: #163358)
  Thanks for Daniel Kobras for noticing shell quoting problem
  * Update AUTHORS, and THANKS, and TODO files.
  
 -- Junichi Uekawa <dancer@debian.org>  Sat,  5 Oct 2002 13:41:40 +0900

pbuilder (0.40) unstable; urgency=low
 
  * Add support for BUILDRESULTUID and BUILDRESULTGID
  so that UID and GID for build results can be specified.
  * Fix minor glitch with copying /etc files into the chroot
  which was caused with debootstrap quirks and pbuilder quirk.
  thanks: Eric Van Buggenhaut <Eric.VanBuggenhaut@AdValvas.be>
  * update manual pages and fix minor typo.
  * Do not fail even if no plugin is available in the plugin dir.

 -- Junichi Uekawa <dancer@debian.org>  Sun, 29 Sep 2002 18:20:30 +0900

pbuilder (0.39) unstable; urgency=low
