@@ -5,8 +5,11 @@ pbuilder (0.45) unstable; urgency=low
   * Standards-Version: 3.5.7. 
   * Build-dep on debhelper 4.1.0 or greater, which removed usr/doc symlink.
   * fix failure cases when initial *dsc file is invalid.
+  * change pbuilder-uml to be i386 only.
+  * build-depends-indep -> build-depends.
+  * Fix build rules to have both binary-arch and binary-indep rules.
 
- -- Junichi Uekawa <dancer@debian.org>  Thu, 24 Oct 2002 13:47:35 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Thu, 24 Oct 2002 19:41:50 +0900
 
 pbuilder (0.44) unstable; urgency=low
 
